# is_74-test

./: README.md
deployment/: .env.img_service  docker-compose.yaml  is_74.sql  run.sh
img_processing_service/: Dockerfile  alembic.ini  pyproject.toml
img_processing_service/alembic/: env.py
img_processing_service/alembic/versions/: 2024_01_29_14_41_5676eac1bac1_.py  2024_02_01_13_24_49df01e0c05e_.py  2024_02_01_17_12_a27c8b062879_.py  2024_02_01_17_13_aa71264edd90_.py
img_processing_service/app/: main.py
img_processing_service/app/api/: endpoints.py
img_processing_service/app/conf/: settings.py
img_processing_service/app/db/: base.py
img_processing_service/app/db_queries/: base.py  pipeline_tasks.py  pipelines.py
img_processing_service/app/handlers/: pipeline_handler.py  registry.py
img_processing_service/app/handlers/celery_worker/: conf.py  tasks.py
img_processing_service/app/handlers/pipeline_steps/: __init__.py  base.py  db_saving_processing.py  img_processing.py  ml_processing.py
img_processing_service/app/models/: pipeline_tasks.py  pipelines.py
img_processing_service/app/schemas/: ml_response.py  pipeline_task.py
ml_microservice/: Dockerfile  pyproject.toml
ml_microservice/app/: main.py
