[tool.poetry]
name = "ml-microservice"
version = "0.1.0"
description = ""
authors = ["sdars94 <sticheeg@yandex.ru>"]
packages = [{include = "ml_microservice"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.0"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
